--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,74 @@
+body {
+  margin: 0;
+  color: white;
+  background-color: #7BAFD4; }
+
+::-webkit-scrollbar {
+  width: 0px; }
+
+#info-page {
+  min-height: 100vh;
+  background-color: #7BAFD4;
+  margin: 0 auto; }
+  #info-page #info {
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 100px; }
+
+@keyframes pulsing {
+  0% {
+    font-size: 20px; }
+  33% {
+    font-size: 25px; }
+  66% {
+    font-size: 30px; }
+  100% {
+    font-size: 35px; } }
+h1 {
+  font-size: 50px; }
+
+.paa {
+  margin-top: 40px;
+  font-size: 24px; }
+
+.comb {
+  margin-top: 160px;
+  font-size: 28px; }
+
+.p-last {
+  position: absolute;
+  bottom: 10px;
+  right: 0;
+  left: 0;
+  margin-top: 70px;
+  animation: pulsing infinite 1.5s alternate linear; }
+  .p-last a {
+    color: white;
+    text-decoration: none; }
+
+#map-page {
+  min-height: 100vh;
+  background-color: #814845;
+  margin: 0 auto; }
+
 #map {
   margin: 0 auto;
-  width: 50%;
-  height: 50%;
-  border: 2px solid black; }
+  width: 100%;
+  background-color: white;
+  height: 50vh;
+  border-bottom: 2px solid black;
+  border-top: 2px solid black; }
+  #map #LocateButton {
+    position: relative;
+    z-index: 100;
+    top: 90px;
+    left: 19px; }
+
+.map .esriMapContainer {
+  top: -34px;
+  height: 100vh; }
+
+#map_root .esriControlsBR {
+  display: none; }
 
 /*# sourceMappingURL=main.css.map */
