--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,25 +1,15 @@
-$carolina-blue: #7BAFD4
-
-body
-  margin: 0
-  color: white
-  background-color: $carolina-blue
-
-::-webkit-scrollbar
-  width: 0px
+@font-face
+  font-family: pixel
+  src: url(../fonts/pixel.ttf)
+@font-face
+  font-family: bembo
+  src: url(../fonts/BemboStd.otf)
 
 @mixin page($bg-color)
   min-height: 100vh
   background-color: $bg-color
   margin: 0 auto
 
-#info-page
-  @include page($carolina-blue)
-  #info
-    text-align: center
-    margin: 0 auto
-    padding-top: 100px
-    
 @keyframes pulsing
   0%
     font-size: 20px
@@ -30,8 +20,32 @@ body
   100%
     font-size: 35px
 
-h1
+$carolina-blue: #7BAFD4
+$width: 100%
+
+body
+  width: $width
+  margin: 0 auto
+  color: white
+  font-family: bembo
+  background-color: $carolina-blue
+
+::-webkit-scrollbar
+  width: 0px
+
+#info-page
+  @include page($carolina-blue)
+  #info
+    text-align: center
+    margin: 0 auto
+    padding-top: 100px
+
+#logo
+  width: 200px
+#header
   font-size: 50px
+  font-family: pixel
+
 .paa
   margin-top: 40px
   font-size: 24px
@@ -54,9 +68,9 @@ h1
 
 #map
   margin: 0 auto
-  width: 100%
+  width: $width
   background-color: white
-  height: 50vh
+  height: 69vh
   border-bottom: 2px solid black
   border-top: 2px solid black
   #LocateButton
