more website maintenance

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -6,7 +6,7 @@
   src: url(../fonts/BemboStd.otf)
 
 @mixin page($bg-color)
-  min-height: 100vh
+  height: 100vh
   background-color: $bg-color
   margin: 0 auto
 
@@ -24,8 +24,8 @@ $carolina-blue: #7BAFD4
 $width: 100%
 
 body
-  width: $width
   margin: 0 auto
+  text-align: center
   color: white
   font-family: bembo
   background-color: $carolina-blue
@@ -36,7 +36,6 @@ body
 #info-page
   @include page($carolina-blue)
   #info
-    text-align: center
     margin: 0 auto
     padding-top: 100px
 
@@ -65,6 +64,10 @@ body
 
 #map-page
   @include page(#814845)
+  margin: 0
+  h2
+    margin: 0 auto
+    margin-top: 20px
 
 #map
   margin: 0 auto
@@ -81,7 +84,6 @@ body
 
 .map
   .esriMapContainer
-    top: -34px
     height: 100vh
 
 #map_root
