--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@
   100% {
     font-size: 35px; } }
 body {
-  width: 100%;
   margin: 0 auto;
+  text-align: center;
   color: white;
   font-family: bembo;
   background-color: #7BAFD4; }
@@ -24,11 +24,10 @@ body {
   width: 0px; }
 
 #info-page {
-  min-height: 100vh;
+  height: 100vh;
   background-color: #7BAFD4;
   margin: 0 auto; }
   #info-page #info {
-    text-align: center;
     margin: 0 auto;
     padding-top: 100px; }
 
@@ -59,9 +58,13 @@ body {
     text-decoration: none; }
 
 #map-page {
-  min-height: 100vh;
+  height: 100vh;
   background-color: #814845;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin: 0; }
+  #map-page h2 {
+    margin: 0 auto;
+    margin-top: 20px; }
 
 #map {
   margin: 0 auto;
@@ -77,7 +80,6 @@ body {
     left: 19px; }
 
 .map .esriMapContainer {
-  top: -34px;
   height: 100vh; }
 
 #map_root .esriControlsBR {
