--- a/sass/main.sass
+++ b/sass/main.sass
@@ -21,14 +21,15 @@
     font-size: 35px
 
 $carolina-blue: #7BAFD4
-$width: 100%
+$width: 966px
 
 body
+  width: $width
   margin: 0 auto
   text-align: center
   color: white
   font-family: bembo
-  background-color: $carolina-blue
+  background-color: black
 
 ::-webkit-scrollbar
   width: 0px
